litellm-terraform-stack/modules/eks/kubernetes-manifests.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: litellm-deployment
spec:
  replicas: ${desired_capacity}
  selector:
    matchLabels:
      app: litellm
  template:
    metadata:
      labels:
        app: litellm
    spec:
      nodeSelector:
        eks.amazonaws.com/nodegroup: "${nodegroup_name}"
      serviceAccountName: litellm-service-account
      containers:
      - name: litellm-container
        image: "${ecr_litellm_repository_url}:${litellm_version}"
        imagePullPolicy: Always
        ports:
        - containerPort: 4000
        readinessProbe:
          httpGet:
            path: /health/liveliness
            port: 4000
          initialDelaySeconds: 20
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health/liveliness
            port: 4000
          initialDelaySeconds: 20
          periodSeconds: 10
        resources:
          requests:
            cpu: "${litellm_cpu_request}"
            memory: "${litellm_memory_request}"
          limits:
            cpu: "${litellm_cpu_limit}"
            memory: "${litellm_memory_limit}"
      - name: middleware-container
        image: "${ecr_middleware_repository_url}:latest"
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /bedrock/health/liveliness
            port: 3000
          initialDelaySeconds: 20
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /bedrock/health/liveliness
            port: 3000
          initialDelaySeconds: 20
          periodSeconds: 10
        resources:
          requests:
            cpu: "${middleware_cpu_request}"
            memory: "${middleware_memory_request}"
          limits:
            cpu: "${middleware_cpu_limit}"
            memory: "${middleware_memory_limit}"

---
apiVersion: v1
kind: Service
metadata:
  name: litellm-service
spec:
  selector:
    app: litellm
  ports:
  - name: port4000
    port: 4000
    targetPort: 4000
  - name: port3000
    port: 3000
    targetPort: 3000
  type: ClusterIP

%{ if enable_hpa }
